# gecs

./: CMakeLists.txt  README.md
examples/: ExampleTest.c
headers/: gecs.h  gecs_array.h  gecs_bitset.h  gecs_cgdarray.h  gecs_componentgroup.h  gecs_entityarray.h  gecs_errors.h  gecs_gdata.h  gecs_system.h  gecs_typedefs.h
src/: gecs.c  gecs_array.c  gecs_bitset.c  gecs_cgdarray.c  gecs_componentgroup.c  gecs_entityarray.c  gecs_errors.c  gecs_gdata.c  gecs_system.c  gecs_typedefs.c
